# NeuroGlyph

./: .gitignore  ACTIONLIST_5MONTH.md  CONTRIBUTING.md  LICENSE  NEUROGLYPH_ANALYSIS_SUMMARY.md  NG_Cognitive_VM_v1.0.md  NeuroGlyph_Deck_v3.7_Beautified.ppt  README.md  STRUCTURE_UPDATE.md  neuroglyph_visual_interface.md  neuroglyph_visual_interface_md.md  pyproject.toml  requirements.txt  setup.py
docs/: NG-spec-4.0.md  NG_Cognitive_VM_v1.1 .md  NeuroGlyph-User-Guide-v3.7-aligned.md  NeuroGlyph-WhitePaper.md  PISA-SLIDES.it.cleaned.md  PISA-SLIDES.it.final.md  PISA-SLIDES.md  hyri_pisa_demo_philosophers_v2 (4).md  neuroglyph_expansion.md  pisa-plenaria.md  rhizomatic_conversation.md
docs/next/: NG-CP-macro-kit.md  NG-CP-studio-sandbox.md  NG-CP-v0.1.md  neuroglyph_expansion.md  rhizomatic_conversation.md
engine/: __init__.py  ng_runtime_demo.ipynb  runtime.py
examples/: concept_composition.ng  philosophical_session.ng
parser/: NeuroGlyphParser.ipynb  NeuroGlyphParser.py  NeuroGlyphParser_v2.py  __init__.py
perser/: NeuroGlyparser.py
ui/: README.md  neuroglyph_visual_interface.html
